msg comment solved, excpet scrollbar

--- a/style.css
+++ b/style.css
@@ -120,6 +120,14 @@ html {
     margin: 0 auto;
 }
 
+.container-site-profile {
+    max-width: 1440px;
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
+    position: relative;
+}
+
 .container-site-job-match {
     max-width: 1920px;
     width: 100%;
@@ -449,7 +457,7 @@ img.vector {
 /********* images text start here******/
 
 .sucess-featured-sec {
-    background: linear-gradient(90deg, #F2F7FF 60%, #FFFFFF 40%);
+    background: linear-gradient(90deg, #f2f7ff4d 60%, #FFFFFF 40%);
     margin-top: 30px;
     padding: 50px 0px;
 }
@@ -517,7 +525,7 @@ img.vector {
 /****** seond col****/
 
 .sucess-featured-sec-alt {
-    background: linear-gradient(90deg, #FFFFFF 20%, #F2F7FF 80%);
+    background: linear-gradient(90deg, #FFFFFF 20%, #f2f7ff4d 80%);
     margin: 100px 0px;
     padding: 50px 0px;
 }
@@ -2584,6 +2592,13 @@ margin-bottom: 5px;
     gap: 10px;
 }
 
+.job-services-right-col-anchor a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none;
+}
+
 .job-services-right-col p {
     color: var(--text-color);
     font-family: var(--museo-sans);
@@ -2591,7 +2606,20 @@ margin-bottom: 5px;
     font-weight: var(--font-weight-medium);
 }
 
+.job-services-right-col-anchor a p {
+    color: var(--text-color);
+    font-family: var(--museo-sans);
+    font-size: var(--body-text);
+    font-weight: var(--font-weight-medium);
+}
+
 .job-services-right-col img {
+    height: 35px;
+    width: 35px;
+    object-fit: contain;
+}
+
+.job-services-right-col-anchor a img {
     height: 35px;
     width: 35px;
     object-fit: contain;
@@ -3174,6 +3202,7 @@ input#preferences-prfile {
     position: absolute;
     right: 0;
     z-index: 1;
+    padding-right: 15px;
 }
 
 .hide-show-click {
@@ -3207,11 +3236,16 @@ input#preferences-prfile {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
 }
 
 .upload-candidate-intro-vedio {
     max-width: 50%;
     width: 100%;
+}
+
+.upload-candidate-intro-vedio img {
+    max-width: 100%;
 }
 
 .check-box-vedio {
@@ -3235,6 +3269,21 @@ ul.candidate-profile-data-list {
     line-height: 42px;
 }
 
+.candidate-profile-datefill {
+    color: var(--primary-color);
+    font-size: var(--sub-heading);
+    font-weight: var(--font-weight-bold);
+    font-family: var(--museo-sans);
+    margin-bottom: 15px;
+    padding: 0 10px;
+    background: transparent;
+    box-shadow: none;
+}
+
+.accordion-candidate-prfile {
+    padding-bottom: 20px;
+}
+
 
 /****************candidate profile model ****************/
 
@@ -3247,7 +3296,7 @@ ul.candidate-profile-data-list {
     overflow-y: auto;
 }
 
-.hide-model-popup {
+.hide-model-popup-profile {
     display: none;
 }
 
@@ -3257,6 +3306,10 @@ ul.candidate-profile-data-list {
     margin: 100px auto 0;
     padding: 40px 0px;
     position: relative;
+    background: #FFFFFF;
+    border: 2px solid #BDBDBD;
+    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 24px;
 }
 
 .close-img-resume {
@@ -3264,13 +3317,7 @@ ul.candidate-profile-data-list {
     right: 15px;
     top: 15px;
     cursor: pointer;
-}
-
-.popup-candidate-resume {
-    background: #FFFFFF;
-    border: 2px solid #BDBDBD;
-    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.1);
-    border-radius: 24px;
+    z-index: 1;
 }
 
 .model-logo {
@@ -3471,6 +3518,13 @@ p.resume-degree {
     font-family: var(--museo-sans);
     font-weight: var(--font-weight-medium);
     line-height: 28px;
+}
+
+
+/*************image cursour ***********/
+
+.icon-cursor {
+    cursor: pointer;
 }
 
 
@@ -4408,6 +4462,7 @@ p.resume-degree {
         position: absolute;
         right: 10px;
         top: 15px;
+        z-index: 1;
     }
     p.popup-text {
         font-size: 20px;
@@ -4700,6 +4755,9 @@ p.resume-degree {
     }
     button.accordion-button.collapsed,
     .accordion-button:not(.collapsed) {
+        font-size: 24px;
+    }
+    .candidate-profile-datefill {
         font-size: 24px;
     }
     .back-save-btns {
